--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,7 +75,7 @@ spring:
                      auth: true
                      starttls.enable: true
     default-encoding: UTF-8
-    test-connection: true
+    test-connection: false
 
 # ===============================
 # = Tomcat
